burger repositioned to not overlap. scroll in place on app so no background image issues

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,12 @@ body {
 body::-webkit-scrollbar{
     display: none;
 }
+
+.App {
+    height: 100vh;
+    overflow: scroll;
+}
+
+.App::-webkit-scrollbar {
+    display: none;
+}
