--- a/src/components/HeaderAndCountryFilter.css
+++ b/src/components/HeaderAndCountryFilter.css
@@ -22,6 +22,10 @@
     margin: 0px 10%;
 }
 
+.navbar {
+    padding-bottom: 20px;
+}
+
 .navbar > NarBar {
     justify-self: right;
 }
