--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -3,7 +3,7 @@
     width: 35px;
     height: 25px;
     left: 36px;
-    top: 80px;
+    top: 65px;
 }
   
 .bm-burger-bars {
